--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </section>
 
     <section class="section first--section">
-            <ul class="list container row text-center">
+            <ul class="container row text-center">
                 <li class="list__item">
                     <h3 class="title--gold">Mobile-first</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eu ligula id velit cursus accumsan. Phasellus velit elit, scelerisque.</p>
@@ -51,25 +51,25 @@
     </section>
 
     <section class="section second--section container">
-        <div class="section__content">
-            <h2 class="section__title title--gold">It doesn't have to be so hard</h2>
-            <p class="section__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam interdum ullamcorper mauris, ut varius quam venenatis id. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aenean dui est, rhoncus at risus eu, ornare cursus lorem. Suspendisse tristique sed dolor id aliquam. Class aptent taciti sociosqu ad.</p>
+        <div>
+            <h2 class="title--gold">It doesn't have to be so hard</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam interdum ullamcorper mauris, ut varius quam venenatis id. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aenean dui est, rhoncus at risus eu, ornare cursus lorem. Suspendisse tristique sed dolor id aliquam. Class aptent taciti sociosqu ad.</p>
             <img src="img/the-image.jpg" alt="ux design sketches" class="section__image">
-            <p class="section__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam interdum ullamcorper mauris, ut varius quam venenatis id. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aenean dui est, rhoncus at risus eu, ornare cursus lorem. Suspendisse tristique sed dolor id aliquam. Class aptent taciti sociosqu ad.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam interdum ullamcorper mauris, ut varius quam venenatis id. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aenean dui est, rhoncus at risus eu, ornare cursus lorem. Suspendisse tristique sed dolor id aliquam. Class aptent taciti sociosqu ad.</p>
         </div>
         <aside>
             <ul class="aside__list text-center">
                 <li class="aside__list__item">
-                    <h3 class="aside__list__item__title">Break it down</h3>
-                    <p class="aside__list__item_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eu ligula id velit cursus accumsan. Phasellus velit elit, scelerisque.</p>
+                    <h3>Break it down</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eu ligula id velit cursus accumsan. Phasellus velit elit, scelerisque.</p>
                 </li>
                 <li class="aside__list__item">
-                    <h3 class="aside__list__item__title">Work your way up</h3>
-                    <p class="aside__list__item_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eu ligula id velit cursus accumsan. Phasellus velit elit, scelerisque.</p>
+                    <h3>Work your way up</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eu ligula id velit cursus accumsan. Phasellus velit elit, scelerisque.</p>
                 </li>
                 <li class="aside__list__item">
-                    <h3 class="aside__list__item__title">Break it down</h3>
-                    <p class="aside__list__item_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eu ligula id velit cursus accumsan. Phasellus velit elit, scelerisque.</p>
+                    <h3>Break it down</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eu ligula id velit cursus accumsan. Phasellus velit elit, scelerisque.</p>
                 </li>
             </ul>
         </aside>
